[gd_scene load_steps=4 format=2]

[ext_resource path="res://Bullets/Scripts/BulletSpawner.gd" type="Script" id=1]
[ext_resource path="res://Bullets/Scripts/RandomizeTimer.gd" type="Script" id=2]
[ext_resource path="res://Bullets/Scripts/SpawnPointsContainer.gd" type="Script" id=3]

[node name="BulletSpawner" type="Node2D"]
z_index = -2
script = ExtResource( 1 )

[node name="SpawnPoints" type="Node2D" parent="."]
script = ExtResource( 3 )
initial_rotation = 90.0

[node name="StartDelay" type="Timer" parent="."]
one_shot = true
autostart = true
script = ExtResource( 2 )
start_delay_min = 0.1
start_delay_max = 0.2

[node name="BurstDuration" type="Timer" parent="."]
one_shot = true

[node name="BurstCooldown" type="Timer" parent="."]
one_shot = true

[node name="ShotTiming" type="Timer" parent="."]
wait_time = 0.2

[connection signal="timeout" from="StartDelay" to="." method="start_firing"]
[connection signal="timeout" from="BurstDuration" to="." method="_end_burst"]
[connection signal="timeout" from="BurstCooldown" to="." method="start_firing"]
[connection signal="timeout" from="ShotTiming" to="." method="_volley"]
